styling post page, added CodeMirror

--- a/app/views/home/front.html.erb
+++ b/app/views/home/front.html.erb
@@ -1,3 +1,4 @@
+<div id="robot"></div>
 <div class="row">
   <div id="intro" class="col-lg-7 text-left">
     <h1>Connect with other Web Developers and Designers!</h1>
