--- a/app/assets/stylesheets/posts.css.scss
+++ b/app/assets/stylesheets/posts.css.scss
@@ -4,8 +4,8 @@
 
 .activity-post, .post {
   .content {
-    margin-left: 60px;
-    padding: 5px 15px;
+    //margin-left: 60px;
+    //padding: 5px 15px;
     .text {
       font-size: $default-font-size;
     }
@@ -19,4 +19,14 @@
       }
     }
   }
+}
+#post-content{
+  background: #272822;
+}
+div.editable{
+  height: 100% !important;
+  max-height: 1055px !important;
+}
+.CodeMirror pre{
+  font-size: 12px !important;
 }
