--- a/app/assets/stylesheets/styles.css.scss
+++ b/app/assets/stylesheets/styles.css.scss
@@ -15,10 +15,10 @@ body {
 #robot{
   background : url("robot.svg");
   background-size: 520px 520px;
-  width: 630px;
-  height: 630px;
   position: absolute;
   left: 55%;
+  width: 100%;
+  height: 100%;
   //background-attachment: fixed;
   //background-repeat: no-repeat;
   //background-position: center center;
