--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -3,7 +3,9 @@
   <%= form_for @post, html: { class: 'post_form' } do |f| %>
     <div class="form-group">
       <h4>Update Status</h4>
-      <div id="post-content" contenteditable="true" class="editable form-control input-mentionable" placeholder="What's up?"></div>
+      <div id="post-content" contenteditable="true" class="editable form-control input-mentionable" placeholder="What's up?">
+      <textarea class="post"></textarea>
+      </div>
       <%= f.hidden_field :content, class: 'form-control input-mentionable', autofocus: true %>
     </div>
     <div id="img-preview" class="form-group hidden">
