--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -1,4 +1,4 @@
-<div class="well">
+<div>
   <div id="mentionable-data" data-content="<%= mentionable_user_path(current_user) %>"></div>
   <%= form_for @post, html: { class: 'post_form' } do |f| %>
     <div class="form-group">
