--- a/app/views/shared/_user_info.html.erb
+++ b/app/views/shared/_user_info.html.erb
@@ -1,7 +1,8 @@
-<div id="user-info" class="well">
+<div id="user-info">
   <div class="text-center">
     <%= render 'shared/avatar', user: @user %><br>
     <h5><%= link_to @user.name, @user %></h5>
+    <h5><%= link_to @user.about, @user %></h5>
   </div>
   <h5>
     <%= fa_icon 'shield' %>
