setting up readme

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,6 +1,6 @@
 <div id="robot"></div>
 <div class="row">
-  <div class="col-lg-4">
+  <div class="col-md-4">
     <h3>Sign up</h3>
     <br>
     <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
